--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>House Price Prediction</title>
+</head>
+<body>
+    <h1>House Price Prediction</h1>
+    <form action="/predict" method="post">
+        <label for="size">Size:</label>
+        <input type="number" id="size" name="size" step="0.01"><br>
+        <label for="rooms">Number of Rooms:</label>
+        <input type="number" id="rooms" name="rooms"><br>
+        <button type="submit">Predict</button>
+    </form>
+</body>
+</html>
 
